correction of slds truncate and use of normalizeArray

--- a/src/modules/base/list/list.css
+++ b/src/modules/base/list/list.css
@@ -34,9 +34,3 @@
     cursor: grabbing;
     background-color: rgba(255, 255, 255, 0.6);
 }
-
-.description-text {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
